[package]
name = "tilepad-plugin-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tilepad/tilepad-plugin-sdk-rs"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "Plugin SDK for writing Tilepad plugins"

[dependencies]
# Async 
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# Websocket
tokio-tungstenite = "0.26.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Logging 
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line argument parsing
clap = { version = "4", features = ["derive"] }

# Unique IDs
uuid = { version = "1", features = ["serde", "v4"] }

# Locking for shared resources 
parking_lot = "0.12.3"
