[package]
name = "tilepad-plugin-sdk"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tilepad/tilepad-plugin-sdk-rs"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "Plugin SDK for writing Tilepad plugins"

[dependencies]
# Async 
tokio = { version = "1", features = ["macros", "net", "sync"] }
futures-util = "0.3"

# Websocket
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"

# Logging 
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line argument parsing
clap = { version = "4", features = ["derive"] }

# Unique IDs
uuid = { version = "1", features = ["serde", "v4"] }

# Locking for shared resources 
parking_lot = "0.12.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "sync"] }
